--- a/opus/java/tenmillion-fans-1-Fans.html
+++ b/opus/java/tenmillion-fans-1-Fans.html
@@ -16,7 +16,7 @@
   <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
 </head>
 <body>
-代码预览：<a href="tenmillion-fans-1-Main.java" download="Main.java"><div id="download"><font color=White>下载</font></div></a><br>
+代码预览：<a href="tenmillion-fans-1-Fans.java" download="Fans.java"><div id="download"><font color=White>下载</font></div></a><br>
 <div align="left" class="java">
 <table border="0" cellpadding="3" cellspacing="0" bgcolor="#ffffff">
    <tr>
