--- a/index.html
+++ b/index.html
@@ -71,6 +71,8 @@
   if(navigator.userAgent.match(/(iPhone|Android)/i)){
       alert("使用电脑浏览效果更佳，但您仍可继续浏览");
   }
+  alert("啊，六一班的同学们，这只是个隶属于我老同学和朋友的一个破工作室的刚建不久差点遗弃的破站而已，没啥好看的233");
+  alert("彩蛋已经全部封死，放心食用[笑]");
   </script>
   <div style="height=240px"></div>
   <div style="background-color:DDFFFF"><font size="15" face="宋体">索引</font></div>
@@ -97,7 +99,7 @@
       <strong>内嵌视频测试</strong>
       <br>
       &nbsp;&nbsp;大家看看二维码隐藏着什么XD
-      <iframe width="380" height="240" src="//player.bilibili.com/player.html?aid=98581246&cid=39139016&page=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe>
+      <!--诶 一直藏着似乎也不是个办法（苦笑）#Carry your world#<iframe width="380" height="240" src="//player.bilibili.com/player.html?aid=98581246&cid=39139016&page=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe>-->
     </font>
   </div></a>
   <a href="post/3.html"><div id="display3">
@@ -113,7 +115,7 @@
   <div id="pic">
   </div>
   <div id="tips">
-    建站者：<a href="cd1.html"><font color=Black>友谊の力量</font></a> 一切本站内容归属凌空工作室管理&nbsp;&nbsp;
+    建站者：<a href="这个彩蛋被封锁了.html"><font color=Black>友谊の力量</font></a> 一切本站内容归属凌空工作室管理&nbsp;&nbsp;
     <br>
     工作室总部创立日期：2018.12.09，正式成立于2019.03.20，网站建立于2020.03.24&nbsp;&nbsp; 
     <br>
