--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
   }
   alert("啊，六一班的同学们，这只是个隶属于我老同学和朋友的一个破工作室的刚建不久差点遗弃的破站而已，没啥好看的233");
   alert("彩蛋已经全部封死，放心食用[笑]");
+  alert("源代码在https://github.com/MineCreeper86/skygroup/，不要乱发Pull Request！！！");
   </script>
   <div style="height=240px"></div>
   <div style="background-color:DDFFFF"><font size="15" face="宋体">索引</font></div>
