--- a/info.html
+++ b/info.html
@@ -8,7 +8,7 @@
   <script>
    window.onload = ()=> {
     let i = Math.floor(Math.random()*50);
-    if(parseInt(i)==49){
+    if(parseInt(i)==50){
       let text = prompt("Creeper?", "Se no（首字母大写，加空格，没符号）");
       if(text == "Aww man"){
         alert("验证成功，欢迎A级成员Dr. Steve，SCP-682收容失效，需要处理。");
@@ -23,7 +23,7 @@
 <body>
   <a href="index.html"><font color="707070" size="5">返回上级目录</font></a>
   <br>
-  <strong><font size="12">概述</font></strong><br>    凌空工作室于2018年12月9日初步创建，于2019年3月20日正式成立,此网站建立于2020年3月24日。<br>    目前有10名成员。<br>    作品语言有python，C++，Scratch，Java。<br>于工作室工作没有薪水，全凭兴趣.<br>    此网站向外展示我们的编程作品，希望大家喜欢。<br>    随缘更新，也希望大家加gouzaixuan6808微信提议
+  <strong><font size="12">概述</font></strong><br>    凌空工作室于2018年12月9日初步创建，于2019年3月20日正式成立,此网站建立于2020年3月24日。<br>    目前有10名成员。<br>    作品语言有python，C++，Scratch，Java。<br>于工作室工作没有薪水，全凭兴趣.<br>    此网站向外展示我们的编程作品，希望大家喜欢。<br>    随缘更新，<!--也希望大家加gouzaixuan6808微信提议-->
   <br><br>
   <strong><font size="12">改名记录</font></strong><br>    2018.12.09 竖笛工作室<br>    2018.12.19 竖钗工作室<br>    2020.03.20 凌空工作室
 </body>
