--- a/index.html
+++ b/index.html
@@ -95,14 +95,14 @@
       &nbsp;&nbsp;3月24日，我们拥有了网站一个！完全免费！（Github的带胜利）OwO
     </font>
   </div></a>
-  <a href="https://www.bilibili.com/video/BV177411m7o3"><div id="display2">
+  <!--<a href="https://www.bilibili.com/video/BV177411m7o3">--><div id="display2">
     <font color="010101">
       <strong>内嵌视频测试</strong>
       <br>
       &nbsp;&nbsp;大家看看二维码隐藏着什么XD
       <!--诶 一直藏着似乎也不是个办法（苦笑）#Carry your world#<iframe width="380" height="240" src="//player.bilibili.com/player.html?aid=98581246&cid=39139016&page=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe>-->
     </font>
-  </div></a>
+  </div><!--</a>-->
   <a href="post/3.html"><div id="display3">
     <font color="010101">
       <strong>卑微地打个小广告</strong>
