--- a/index.html
+++ b/index.html
@@ -65,15 +65,22 @@
     overflow:hidden;
     }
   </style>
+  <style> 
+  html{ 
+        -webkit-filter:grayscale(100%); 
+        -moz-filter:grayscale(100%); 
+        -ms-filter:grayscale(100%); 
+        -o-filter:grayscale(100%); 
+        filter:progid:DXImageTransform.Microsoft.BasicImage(grayscale=1);
+        _filter:none; 
+    }
+  </style>
 </head>
 <body>
   <script>
   if(navigator.userAgent.match(/(iPhone|Android)/i)){
       alert("使用电脑浏览效果更佳，但您仍可继续浏览");
   }
-  alert("啊，六一班的同学们，这只是个隶属于我老同学和朋友的一个破工作室的刚建不久差点遗弃的破站而已，没啥好看的233");
-  alert("彩蛋已经全部封死，放心食用[笑]");
-  alert("源代码在https://github.com/MineCreeper86/skygroup/，不要乱发Pull Request！！！");
   </script>
   <div style="height=240px"></div>
   <div style="background-color:DDFFFF"><font size="15" face="宋体">索引</font></div>
@@ -95,14 +102,14 @@
       &nbsp;&nbsp;3月24日，我们拥有了网站一个！完全免费！（Github的带胜利）OwO
     </font>
   </div></a>
-  <!--<a href="https://www.bilibili.com/video/BV177411m7o3">--><div id="display2">
+  <a href="https://www.bilibili.com/video/BV177411m7o3"><div id="display2">
     <font color="010101">
       <strong>内嵌视频测试</strong>
       <br>
       &nbsp;&nbsp;大家看看二维码隐藏着什么XD
-      <!--诶 一直藏着似乎也不是个办法（苦笑）#Carry your world#<iframe width="380" height="240" src="//player.bilibili.com/player.html?aid=98581246&cid=39139016&page=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe>-->
+      <iframe width="380" height="240" src="//player.bilibili.com/player.html?aid=98581246&cid=39139016&page=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe>
     </font>
-  </div><!--</a>-->
+  </div></a>
   <a href="post/3.html"><div id="display3">
     <font color="010101">
       <strong>卑微地打个小广告</strong>
@@ -116,7 +123,7 @@
   <div id="pic">
   </div>
   <div id="tips">
-    建站者：<a href="这个彩蛋被封锁了.html"><font color=Black>友谊の力量</font></a> 一切本站内容归属凌空工作室管理&nbsp;&nbsp;
+    建站者：<a href="cd1.html"><font color=Black>友谊の力量</font></a> 一切本站内容归属凌空工作室管理&nbsp;&nbsp;
     <br>
     工作室总部创立日期：2018.12.09，正式成立于2019.03.20，网站建立于2020.03.24&nbsp;&nbsp; 
     <br>
